test/syntax/fail/recursive_type_definition.sync
type a = b
and b = a
