test/syntax/fail/recursive_type_definition.expected
File "dummy.sync", line 2, characters 5-6:
 2 | and b = a
         ^

Error: Direct recursive type definition for 'b'.
